<resources>
    <string name="app_name">BachUZ</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="cancel_button">Cancel</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="existing_email_error">This e-mail is already registered.</string>
    <string name="internal_error">Internal application error.</string>
    <string name="input_empty">This field cannot be empty.</string>
    <string name="email_not_registered">E-mail address is not registered.</string>
    <string name="wrong_password">Password is wrong.</string>
    <string name="username_hint">Display name</string>
    <string name="repassword_hint">Re-type password</string>
    <string name="password_too_short">Password should have at least 8 characters.</string>
    <string name="password_not_match">Passwords do not match.</string>
    <string name="new_event_name">New event</string>
    <string name="events_toolbar_title">Events</string>
    <string name="add_event_button_description">Add new event</string>
    <string name="calendar_button_description">Open calendar</string>
    <string name="save_event_edit_button">Save data</string>
    <string name="cancel_event_edit_button">Cancel</string>
    <string name="event_date_edit_button">Select date</string>
    <string name="event_location_edit_button">Select location</string>
    <string name="map_button_description">Open map</string>
    <string name="shopping_cart_toolbar_title">Shopping cart</string>
    <string name="add_shopping_item_button_description">Add new item</string>
    <string name="new_shopping_cart_item">New item</string>
    <string name="add_new_member_button_description">Add new member</string>
    <string name="leave_event_button_description">Leave event</string>
    <string name="member_added_toast">User added!</string>
    <string name="member_existing_toast">User already invited</string>
    <string name="steps_counter">Steps: </string>
    <string name="open_sms">SMS message</string>
    <string name="insert_sms_text">Your SMS message to your friends</string>
    <string name="send_sms">Send message</string>
</resources>