<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent" >
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/toolbarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/shopping_cart_toolbar_title"
            android:textSize="24sp"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            android:visibility="visible"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/shoppingItemsListView"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:divider="#000"
            android:dividerHeight="1dp"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveShoppingCartEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/save_event_edit_button"
            android:focusable="true"
            ads:layout_constraintBottom_toTopOf="@+id/cancelShoppingCartEditButton"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:srcCompat="@drawable/baseline_check_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancelShoppingCartEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:contentDescription="@string/cancel_event_edit_button"
            android:focusable="true"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:srcCompat="@drawable/baseline_cancel_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addShoppingCartItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_shopping_item_button_description"
            android:focusable="true"
            android:src="@drawable/baseline_add_24"
            ads:layout_constraintBottom_toTopOf="@+id/saveShoppingCartEditButton"
            ads:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
